--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
   border:1px solid #3e8e41;
 }
 .btn-red{
-  background-color: #df4d4d; /* Green */
+  background-color: #df4d4d; /* white red */
   border:1px solid #df4d4d;
 
 }
@@ -42,7 +42,7 @@
   border:1px solid #e02615;
 }
 .btn-default{
-  background-color: #636161; /* Green */
+  background-color: #636161; /* greey */
   border:1px solid #636161;
   color: white;
  
